Added code in Dockerfile for building minimal image of our project in two stage build using jlink.